# movement

./: .env.example  .eslintrc.json  .gitignore  .prettierignore  PRESET_GUIDE.md  QUICKSTART.md  README.md  debug.html  index.html  main.py  package-lock.json  package.json  pyproject.toml  start-windows.bat  tsconfig.json  vite.config.ts  vitest.config.ts
backend/: build_grammar.py  download_noise.py  enroll.py  main.py  matcher.py  record_enrollment.py
public/skin/: sprites.json
scripts/: build-gunthry-preset.mjs  build-mandelverse-butterchurn.mjs  build-stock-preset-snapshot.mjs  download-vosk-model.mjs  extract-skin.py  find-vosk-in-downloads.ps1
src/: audio-input.ts  audio-processor.ts  butterchurn.d.ts  debug.ts  main.ts  mold-sketch.ts  mold.ts  movement-keys.ts  options-summary-hud.ts  preset-variants.ts  side-panel.ts  skin.ts  video-frame-injector.ts  viz-intensity.ts  viz-quality.ts
src/effects/: blackhole.ts  felicidad.ts  heartbeat.ts  nostalgia.ts  post-process-chain.ts  ripple.ts  rotation.ts  sea.ts  spiral.ts  tristeza.ts
src/presets/: aderrasi-potion-slow.ts  custom-registry.ts  flexi-mindblob-slow.ts  gunthry-pine-trees.ts  lines.ts  mandelverse-pack-preset.ts  nebula-pearl.ts  organic-mandel.ts  preset-slowdown.ts  royal-mashup-mandel-bright.ts  royal-mashup-mandel.ts  royal-pink-forge.ts  royal-star-forge.ts  stock-overlays.ts  utils.ts  video-mandel.ts  zylot-paint-spill-slow.ts  zylot-true-visionary-slow.ts
src/presets/json/: Fumbling_Foo + En D & Martin - Mandelverse.butterchurn.json  aderrasi-potion.butterchurn.json  flexi-mindblob.butterchurn.json  gunthry-pine-trees.butterchurn.json  zylot-paint-spill.butterchurn.json  zylot-true-visionary.butterchurn.json
tests/: audio-input.test.ts  options-summary-hud.test.ts  preset-variants.test.ts  viz-intensity.test.ts
