[project]
name = "movement"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "onnxruntime>=1.24.4",
    "opencv-python>=4.13.0.92",
    "sounddevice>=0.5.5",
    "uvicorn[standard]>=0.42.0",
    "vosk>=0.3.42",
]

[dependency-groups]
dev = ["ruff"]
